--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,22 @@
 .App-link {
   color: #09d3ac;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.appbar {
+  height: 50px;
+}
+.body-vertical-span {
+  height: calc(100vh - 50px);
+}
+
+.connect-wallet {
+  position: absolute;
+  left: calc(100% - 300px);
+  width: 200px;
+}
